--- a/package.json
+++ b/package.json
@@ -12,16 +12,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
+    "@angular/animations": "^4.3.3",
+    "@angular/cdk": "^2.0.0-beta.8",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
+    "@angular/material": "^2.0.0-beta.8",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "express": "^4.15.4",
+    "hammerjs": "^2.0.8",
+    "jwt-simple": "^0.5.1",
+    "mongoose": "^4.11.7",
+    "morgan": "^1.8.2",
+    "ngx-cookie": "^1.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
